refactoring of the HTTP layer